# RelevanceRelated

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
analysis/: README.md
analysis/Rscripts/: analysis_FA_JHU.R  check_N.R  gm_cortical_surface_plots.R  gm_subcortical_plots.R  pvs_stats.R
analysis/configs/: config.toml
analysis/relevancerelated/: __init__.py  configs.py  run.py  utils.py
analysis/relevancerelated/dataloader/: atlases.py  mri_registration.py  prune_image.py  statsmaps.py  transformation.py
analysis/relevancerelated/dataloader/LIFE/: LIFE.py  prepare_sic_table.py
analysis/relevancerelated/modeling/: pvs_extraction.py
analysis/relevancerelated/modeling/LRP/: LRP.py  apply_LRP.py  apply_heatmap.py  relevancerelated.py
analysis/relevancerelated/modeling/MRInet/: trained.py
analysis/relevancerelated/statistics/: general_stats.py  stats.py
analysis/relevancerelated/visualizer/: regressions.py  visualize_mri.py
analysis/scripts/: run_pvs_segmentation.sh
data/statsmaps/: relevance_related_data_overview.csv
literature/: Hofmann-Goltermann_et-al_2025.bib
results/FA/: corr_JHU_FA.csv  corr_JHU_FA_t1.csv
results/GM/: corr_subcort_vol-relevance.csv  corr_subcort_vol-relevance_plt.csv  correlation_results_cortical_ct_dktbase.csv  correlation_results_cortical_gmv_dktbase.csv
results/PVS/: T1-FLAIR.PVS_flair-subens.csv  T1-FLAIR.PVS_t1-subens.csv
results/WML/: WMlesion.csv
