[metadata]
name = relevancerelated
description = Run and analyse the RelevanceRelated study (2021-2024)
author = Simon M. Hofmann, Ole Goltermann, Frauke Beyer
license = MIT
license_file = LICENSE
version = 2.0.0
platforms = linux, osx, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.10.15

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[options]
package_dir =
    =analysis
packages =
    relevancerelated
python_requires = >=3.10, <3.11
install_requires =  # scan with `pipreqs` which packages are needed
    antspyx==0.4.2
    freesurfer_stats==1.2.1
    innvestigate==2.1.2
    ipython==8.21.0
    joblib==1.3.2
    matplotlib==3.8.2
    nibabel==5.2.0
    nilearn==0.10.3
    nipype==1.8.6
    numpy==1.26.3
    pandas==1.5.3
    pivottablejs==0.9.0
    psutil==5.9.8
    requests==2.31.0
    scipy==1.12.0
    seaborn==0.13.2
    statannot==0.2.3
    statsmodels==0.14.1
    tensorflow==2.14.1  # potentially, install via: `tensorflow[and-cuda]==2.14.1`
    toml==0.10.2
    tqdm==4.66.1

zip_safe>= False

[options.extras_require]
develop =
    bumpver==2024.1130
    ruff>=0.9.4, <1.0
    pytest>=8.3.4, <9.0.0
    pytest-cov>=6.0.0, <7.0
    pre-commit>=4.1.0, <5.0

[options.package_data]
relevancerelated = py.typed
